<resources>
    <string name="app_name">NeoTest</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="ingresa_tu_contrase_a">Ingresa tu contraseña</string>
    <string name="buenos_d_as">Buenos días</string>
    <string name="contrase_a">Contraseña</string>
    <string name="olvidar_usuario">Olvidar usuario</string>
    <string name="olvid_mi_contrase_a">Olvidé mi contraseña</string>
</resources>